# fontspector

./: .gitignore  Cargo.toml  README.md  RELEASE.md  cog.toml  package-lock.json  package.json
fontbakery-bridge/: CHANGELOG.md  Cargo.toml
fontbakery-bridge/src/: lib.rs
fontspector-checkapi/: CHANGELOG.md  Cargo.toml  build.rs
fontspector-checkapi/src/: check.rs  codetesting.rs  constants.rs  context.rs  error.rs  font.rs  gsub.rs  lib.rs  pens.rs  profile.rs  registry.rs  status.rs  utils.rs
fontspector-checkhelper/: CHANGELOG.md  Cargo.toml
fontspector-checkhelper/src/: check.rs  lib.rs
fontspector-cli/: CHANGELOG.md  Cargo.toml  build.rs
fontspector-cli/src/: args.rs  configuration.rs  main.rs  profiles.rs
fontspector-cli/src/reporters/: badges.rs  duckdb.rs  jinja.rs  json.rs  mod.rs  terminal.rs
fontspector-py/: Cargo.toml
fontspector-py/data/test/noto_sans_tamil_supplement/: METADATA.pb
fontspector-py/src/: lib.rs
fontspector-py/tests/: test_checks_cjk.py  test_checks_filesize.py  test_checks_googlefonts.py  test_checks_opentype_name.py  test_checks_opentype_os2.py  test_checks_shaping.py  test_checks_universal.py
fontspector-web/: Cargo.toml
fontspector-web/src/: lib.rs
fontspector-web/www/: fontspector.css  index.html  index.ts  package-lock.json  package.json  types.ts  webpack.config.js  webworker.js
fontspector-web/www/css/: skeleton.css
profile-adobe/: Cargo.toml
profile-adobe/src/: lib.rs
profile-adobe/src/checks/adobefonts/: STAT_strings.rs  nameid_1_win_english.rs
profile-adobe/src/checks/adobefonts/family/: consistent_upm.rs
profile-designspace/: Cargo.toml
profile-designspace/src/: lib.rs
profile-fontwerk/: CHANGELOG.md  Cargo.toml
profile-fontwerk/src/: lib.rs
profile-fontwerk/src/checks/: mod.rs
profile-fontwerk/src/checks/fontwerk/: fstype.rs  mod.rs  names.rs  soft_hyphen.rs  vendor_id.rs
profile-googlefonts/: CHANGELOG.md  Cargo.toml  build.rs
profile-googlefonts/src/: constants.rs  lib.rs  network_conditions.rs  utils.rs
profile-googlefonts/src/checks/: dotted_circle.rs  mod.rs  soft_dotted.rs
profile-googlefonts/src/checks/googlefonts/: axes_match.rs  canonical_filename.rs  cjk_vertical_metrics.rs  cjk_vertical_metrics_regressions.rs  color_fonts.rs  font_copyright.rs  font_names.rs  fstype.rs  fvar_instances.rs  gasp.rs  glyph_coverage.rs  has_ttfautohint_params.rs  old_ttfautohint.rs  render_own_name.rs  separator_glyphs.rs  tofu.rs  unitsperem.rs  use_typo_metrics.rs  vendor_id.rs  version_bump.rs  vertical_metrics.rs  vertical_metrics_regressions.rs  weightclass.rs
profile-googlefonts/src/checks/googlefonts/STAT/: axis_order.rs  axisregistry.rs  compulsory_axis_values.rs
profile-googlefonts/src/checks/googlefonts/article/: images.rs
profile-googlefonts/src/checks/googlefonts/axisregistry/: fvar_axis_defaults.rs
profile-googlefonts/src/checks/googlefonts/description/: broken_links.rs  git_url.rs  has_article.rs  urls.rs
profile-googlefonts/src/checks/googlefonts/family/: equal_codepoint_coverage.rs  has_license.rs  italics_have_roman_counterparts.rs  tnum_horizontal_metrics.rs
profile-googlefonts/src/checks/googlefonts/glyphsets/: shape_languages.rs
profile-googlefonts/src/checks/googlefonts/license/: OFL_body_text.rs  OFL_copyright.rs
profile-googlefonts/src/checks/outline/: alignment_miss.rs  colinear_vectors.rs  direction.rs  mod.rs  overlapping_path_segments.rs  semi_vertical.rs  short_segments.rs
profile-googlefonts/src/checks/shaping/: forbidden.rs  mod.rs  regression.rs  schema.rs
profile-iso15008/: CHANGELOG.md  Cargo.toml
profile-iso15008/src/: lib.rs
profile-iso15008/src/checks/iso15008/: intercharacter_spacing.rs  interline_spacing.rs  interword_spacing.rs  mod.rs  proportions.rs  stem_width.rs
profile-iso15009/: Cargo.toml
profile-microsoft/: Cargo.toml
profile-microsoft/src/: lib.rs
profile-microsoft/src/checks/: name_length_req.rs  tnum_glyphs_equal_widths.rs
profile-microsoft/src/checks/microsoft/: STAT_axis_values.rs  STAT_table_axis_order.rs  STAT_table_eliding_bit.rs  copyright.rs  fstype.rs  fvar_STAT_axis_ranges.rs  license_description.rs  manufacturer.rs  office_ribz_req.rs  trademark.rs  vendor_url.rs  version.rs
profile-opentype/: CHANGELOG.md  Cargo.toml
profile-opentype/src/: lib.rs
profile-opentype/src/checks/opentype/: GDEF_mark_chars.rs  GDEF_non_mark_chars.rs  GDEF_spacing_marks.rs  caret_slope.rs  code_pages.rs  family_naming_recommendations.rs  font_version.rs  fsselection.rs  glyf_non_transformed_duplicate_components.rs  glyf_unused_data.rs  italic_angle.rs  kern_table.rs  layout_valid_language_tags.rs  layout_valid_script_tags.rs  mac_style.rs  maxadvancewidth.rs  monospace.rs  points_out_of_bounds.rs  post_table_version.rs  postscript_name.rs  slant_direction.rs  unitsperem.rs  vendor_id.rs  weight_class_fvar.rs  xavgcharwidth.rs
profile-testplugin/: Cargo.toml
profile-testplugin/src/: lib.rs
profile-universal/: CHANGELOG.md  Cargo.toml
profile-universal/src/: lib.rs
profile-universal/src/checks/: STAT_in_statics.rs  STAT_strings.rs  alt_caron.rs  arabic_high_hamza.rs  arabic_spacing_symbols.rs  base_has_width.rs  case_mapping.rs  cjk_chws_feature.rs  cjk_not_enough_glyphs.rs  cmap_format_12.rs  color_cpal_brightness.rs  consistent_axes.rs  contour_count.rs  empty_glyph_on_gid1_for_colrv0.rs  empty_letters.rs  family_vertical_metrics.rs  family_win_ascent_and_descent.rs  fontdata_namecheck.rs  freetype_rasterizer.rs  fvar_name_entries.rs  gpos7.rs  gpos_kerning_info.rs  hinting_impact.rs  integer_ppem_if_hinted.rs  interpolation_issues.rs  legacy_accents.rs  ligature_carets.rs  linegaps.rs  mandatory_glyphs.rs  math_signs_width.rs  missing_small_caps_glyphs.rs  nested_components.rs  no_mac_entries.rs  os2_metrics_match_hhea.rs  required_tables.rs  sfnt_version.rs  smart_dropout.rs  stylisticset_description.rs  tabular_kerning.rs  transformed_components.rs  (+14 more)
profile-universal/src/checks/name/: char_restrictions.rs  family_and_style_max_length.rs  italic_names.rs  no_copyright_on_description.rs  trailing_spaces.rs
(+69 files in other folders)
