[workspace]
resolver = "2"

members = [
    "fontspector-cli",
    "fontspector-checkapi",
    "fontspector-checkhelper",
    "profile-adobe",
    "profile-fontwerk",
    "profile-designspace",
    "profile-iso15008",
    "profile-microsoft",
    "profile-opentype",
    "profile-universal",
    "profile-testplugin",
    "profile-googlefonts",
    "fontspector-web",
    "fontbakery-bridge",
    "fontspector-py",
]

default-members = ["fontspector-cli"]

[workspace.dependencies]
pluginator = "1.0.1"

# Font-related deps
fontations = "0.2.0"
unicode-properties = "0.1.3"
unicode_names2 = "1.3.0"
rustybuzz = "0.20.1"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
fontspector-checkhelper = { path = "./fontspector-checkhelper", version = "1.0.0" }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

log = "0.4.14"
itertools = "0.13.0"

# Fontbakery bridge / Python module. Keep these two together
pyo3 = "0.25"
pythonize = "0.25"

indexmap = { version = "2", features = ["serde"] }
tabled = "0.20.0"
kurbo = "0.11"                                     # For italic angle check

regex = "1.10.6"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
