[package]
name = "fontspector-fontbakery-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
description = "Fontspector adaptor to use FontBakery checks"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"

[lib]
# When running as a plugin:
# crate-type = ["cdylib"]
# When running as a library:
crate-type = ["lib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", version = "1.0.0" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }


# Needed for tests
[dev-dependencies]
profile-universal = { path = "../profile-universal", package = "fontspector-profile-universal" }
profile-opentype = { path = "../profile-opentype", package = "fontspector-profile-opentype" }
profile-googlefonts = { path = "../profile-googlefonts", package = "fontspector-profile-googlefonts" }
profile-fontwerk = { path = "../profile-fontwerk", package = "fontspector-profile-fontwerk" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[lints]
workspace = true
