[package]
name = "fontspector-checkapi"
version = "1.0.0"
edition = "2021"
description = "Library for developing checks for the fontspector font QA tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[dependencies]
write-fonts = { workspace = true }
skrifa = { workspace = true }
fontspector-checkhelper = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
# Filetype
glob-match = "0.2.1"

# Needed so that we can refer to status codes on the command line
clap = { version = "4", features = ["derive"], optional = true }

# Serializing and deserializing profiles
toml = { version = "0.8.14", default-features = false, features=["parse"] }
serde = { workspace = true }

# Storing configuration
serde_json = "1.0"

itertools = { workspace = true }

kurbo = { workspace = true, optional = true }
