[package]
name = "fontspector-checkapi"
version = "1.1.0"
edition = "2021"
description = "Library for developing checks for the fontspector font QA tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = []

[build-dependencies]
minreq = { version = "2.6.0", features = ["https"] }
scraper = "0.23.0"
regex = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[dependencies]
fontations = { workspace = true }
fontspector-checkhelper = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
# Filetype
glob-match = "0.2.1"

# Needed so that we can refer to status codes on the command line
clap = { version = "4", features = ["derive"], optional = true }

# Serializing and deserializing profiles
toml = { workspace = true }
serde = { workspace = true }

# Storing configuration
serde_json = "1.0"

itertools = { workspace = true }

kurbo = { workspace = true, optional = true }
thiserror = "2.0.12"
