[package]
name = "fontspector-checkhelper"
version = "1.0.1"
edition = "2021"
description = "Macros for generating check functions for fontspector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.76"

[lints]
workspace = true
