[package]
name = "fontspector"
version = "1.0.2"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
description = "Quality control for OpenType fonts"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"
readme = "../README.md"

[features]
python = ["dep:fontbakery-bridge", "fontspector-checkapi/python"]

[build-dependencies]
walkdir = "2.5"
zip = "3"
quote = "1.0"
shadow-rs = "1.1.1"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "clap",
], version = "1.0.0" }
# These profiles are baked-in
fontbakery-bridge = { path = "../fontbakery-bridge", optional = true, version = "1.0.0", package = "fontspector-fontbakery-bridge" }
profile-universal = { path = "../profile-universal", version = "1.0.0", package = "fontspector-profile-universal" }
profile-opentype = { path = "../profile-opentype", version = "1.0.0", package = "fontspector-profile-opentype" }
profile-iso15008 = { path = "../profile-iso15008", version = "1.0.0", package = "fontspector-profile-iso15008" }
profile-googlefonts = { path = "../profile-googlefonts", version = "1.0.0", package = "fontspector-profile-googlefonts" }
clap = { version = "4", features = ["derive", "string"] }
itertools = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
rayon = "1.0.1"
indicatif = { version = "0.17", features = ["rayon"] }
homedir = "0.3.4"
shadow-rs = { version = "1.1.1", default-features = false }
toml = { workspace = true }

# Terminal reporter
termimad = "0"
colored = "2.1.0"

# JSON reporter
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown/HTML reporters
tera = { version = "1.20.0", default-features = false }
zip = "3"

# CSV reporter
csv = "1.3.1"

# DuckDB reporter
duckdb = { version = "1.2.1", features = ["bundled"], optional = true }
chrono = "0.4"

# HTML reporter
markdown = "1.0.0-alpha.23"
indexmap = { workspace = true }
