[package]
name = "fontspector-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fontspector"
crate-type = ["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }

profile-opentype = { path = "../profile-opentype", package = "fontspector-profile-opentype" }
profile-universal = { path = "../profile-universal", package = "fontspector-profile-universal" }
profile-googlefonts = { path = "../profile-googlefonts", package = "fontspector-profile-googlefonts" }
profile-iso15008 = { path = "../profile-iso15008", package = "fontspector-profile-iso15008" }
profile-fontwerk = { path = "../profile-fontwerk", package = "fontspector-profile-fontwerk" }

serde_json = { workspace = true } # For configuration
pyo3 = { workspace = true }
pythonize = { workspace = true }

[lints]
workspace = true
