[package]
name = "fontspector-profile-designspace"
version = "1.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
norad = "0.16.0"
serde_json = { workspace = true }
quick-xml = { version = "0.37.0", features = ["serialize"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }
