[package]
name = "fontspector-profile-designspace"
version = "1.0.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
norad = "0.16.0"
serde_json = { workspace = true }
quick-xml = { version = "0.38.0", features = ["serialize"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[lints]
workspace = true
