[package]
name = "fontspector-profile-microsoft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
fontations = { workspace = true }
regex = "1.10.6"
rustybuzz = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

# For tnum shaping
rustybuzz = "0.20.1"
