[package]
name = "fontspector-profile-opentype"
version = "1.0.0"
edition = "2021"
authors = [
    "Simon Cozens <simon@simon-cozens.org>",
    "Felipe Sanches <juca@members.fsf.org>",
]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = ["kurbo"] }
fontspector-checkhelper = { workspace = true }
#read-fonts = { workspace = true }
write-fonts = { workspace = true }
skrifa = { workspace = true }
itertools = {workspace = true }
unicode-properties = { workspace = true }
kurbo = { workspace = true } # For italic angle check
