[package]
name = "fontspector-profile-opentype"
version = "1.2.0"
edition = "2021"
authors = [
    "Simon Cozens <simon@simon-cozens.org>",
    "Felipe Sanches <juca@members.fsf.org>",
]
description = "Fontspector checks for OpenType font specification compliance"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
], version = "1.0.0" }
fontspector-checkhelper = { workspace = true }
fontations = { workspace = true }
itertools = { workspace = true }
unicode-properties = { workspace = true }
kurbo = { workspace = true } # For italic angle check

[lints]
workspace = true
