[package]
name = "fontspector-profile-universal"
version = "1.1.0"
edition = "2021"
authors = [
    "Simon Cozens <simon@simon-cozens.org>",
    "Felipe Sanches <juca@members.fsf.org>",
]
description = "Fontspector checks for OpenType font best practices"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
freetype-rs = { version = "0", features = [
    "bundled",
] } # For freetype_rasterizer
reqwest = { version = "0.12", features = ["blocking"] } # For fontdata namecheck

[dependencies]
interpolatable = { version = "1.0", features = [
    "fontations",
], git = "https://github.com/simoncozens/interpolatable" } # For interpolation_issues
fontspector-checkapi = { path = "../fontspector-checkapi", version = "1.0.0" }
fontspector-checkhelper = { workspace = true }
fontations = { workspace = true }
itertools = { workspace = true }
unicode-properties = { workspace = true }
unicode_names2 = { workspace = true }
tabled = { workspace = true }
log = { workspace = true }
humansize = "2.1.3"
serde_json = { workspace = true }
hashbrown = "0.15.2"
kurbo = { workspace = true }

[lints]
workspace = true
